# Sender

./: .gitignore  README.md  backend.dockerfile  docker-compose.yaml  pyproject.toml
app/app/: start.py
app/app/core/: config.py  containers.py
app/app/db/: session.py
app/app/models/: application.py
app/app/repository/: account_telethon.py  base.py  channel.py  spamsettings.py
app/app/services/: account_telethon.py  channel.py  spamsettings.py
app/app/telegram_sender_bot/: bot.py
app/app/telegram_sender_bot/config_data/: config.py
app/app/telegram_sender_bot/handlers/: telethon_handlers.py  user_handlers.py
app/app/telegram_sender_bot/keyboards/: stngs_kbd.py
app/app/telegram_sender_bot/lexicon/: lexicon.py
app/app/utils/: register_telethon_account.py
app/migrations/: script.py.mako
